# ai-agent-my-tool

./: .gitignore  README.md  deploy.sh  ecosystem.config.cjs  package-lock.json  package.json  playwright.config.cjs  pyproject.toml  run-local.sh  run-production.sh
backend/: __init__.py  exceptions.py  main.py
backend/agents/: __init__.py  _registry.py  base_agent.py
backend/agents/crypto_airdrop/: __init__.py  agent.py  fixtures.py  models.py  repository.py  skills.py  sources.py  tools.py
backend/agents/daily_scheduler/: __init__.py  agent.py  models.py  repository.py  skills.py
backend/agents/job_finder/: __init__.py  agent.py  fixtures.py  models.py  repository.py  skills.py  tools.py
backend/api/: __init__.py  config.py  crypto_airdrop.py  daily_scheduler.py  job_finder.py  pages.py  stream.py
backend/shared/: __init__.py  crawler.py  events.py  llm_client.py  openai_catalog.py  settings.py
config/: .env.example  nginx-site.conf  settings.yaml
docs/ai/planning/: epic-ai-agent-tool.md  feature-ai-agent-foundation.md  feature-config-page-and-job-finder-removal.md  feature-crypto-airdrop-agent.md  feature-daily-schedule-agent.md  feature-job-finder-agent.md  feature-midnight-ai-theme-rollout.md  feature-openai-global-config.md  feature-ui-layout-improvements.md  (+1 more)
frontend/static/: app.js  style.css
frontend/templates/: base.html  config.html  crypto_airdrop.html  daily_scheduler.html  dashboard.html  job_finder.html
scripts/: start-playwright-server.sh
tests/: test_app.py
tests/web/: midnight-ai-theme-rollout.spec.ts
(+24 files in other folders)
